--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://71a9b809-efaf-4013-b2ed-e39f6889301f.preview.emergentagent.com
 WDS_SOCKET_PORT=443
